--- a/SvelteFT/package.json
+++ b/SvelteFT/package.json
@@ -19,5 +19,13 @@
 		"svelte-check": "^4.3.2",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"@types/d3": "^7.4.3",
+		"@types/topojson-client": "^3.1.5",
+		"d3": "^7.9.0",
+		"d3-geo": "^3.1.1",
+		"topojson-client": "^3.1.0",
+		"world-atlas": "^2.0.2"
 	}
 }
