--- a/SvelteFT/package.json
+++ b/SvelteFT/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "datavisualisation-minor-techtrack",
+	"name": "svelteft",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
@@ -8,24 +8,16 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/kit": "^2.43.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
-		"@types/topojson-client": "^3.1.5",
-		"svelte": "^5.39.5",
-		"svelte-check": "^4.3.2",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.7"
-	},
-	"dependencies": {
-		"@types/d3": "^7.4.3",
-		"d3": "^7.9.0",
-		"d3-geo": "^3.1.1",
-		"topojson-client": "^3.1.0",
-		"world-atlas": "^2.0.2"
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/kit": "^2.47.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"svelte": "^5.41.0",
+		"svelte-check": "^4.3.3",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.10"
 	}
 }
