--- a/SvelteFT/package.json
+++ b/SvelteFT/package.json
@@ -19,5 +19,10 @@
 		"svelte-check": "^4.3.3",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.10"
+	},
+	"dependencies": {
+		"d3": "^7.9.0",
+		"topojson-client": "^3.1.0",
+		"world-atlas": "^2.0.2"
 	}
 }
