--- a/SvelteFT/package.json
+++ b/SvelteFT/package.json
@@ -21,6 +21,7 @@
 		"vite": "^7.1.10"
 	},
 	"dependencies": {
+		"@types/geojson": "^7946.0.16",
 		"d3": "^7.9.0",
 		"topojson-client": "^3.1.0",
 		"world-atlas": "^2.0.2"
